--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <img SRC="./assessts/images/profile photo.jpeg" height="200" width="180" alt="IT IS MY PROFILE PHOTO"/>
 <p>Name :<b> K.AJAY KUMAR REDDY</b></p>
 <p>Age : <b> 20</b></p>
-<p>College :<b> Acharya institute of techonlogy</b></p>
+<p>College :<b> Acharya institute of technlogy</b></p>
 <p>Semester :<b> 4 </b></p>
 <P>GPA : <b> 9.7</b></P>
 <hr />
